Ritocchi navbar, profilo, impostazioni

--- a/navbar.html
+++ b/navbar.html
@@ -13,17 +13,20 @@
                 <span class="icon-bar"></span>
             </button>
 
-            <!-- Logo o nome del sito  -->
+            <!-- Logo e nome del sito  -->
 
             <div id="logo">
-                <img src="favicon.png" height="45" width="45" />
+                <img src="favicon.png" class="hidden-xs" height="45" width="45" />
                 <a class="navbar-brand" href="index.html">Glas Travels</a>
             </div>
         </div>
 
-        <!-- menu items -->
+        <!-- elementi della navbar -->
 
         <div class="navbar-collapse collapse">
+
+            <!-- elementi della navbar allineati a sinistra -->
+
             <ul class="nav navbar-nav navbar-center">
 
                 <!-- Viaggi -->
@@ -68,6 +71,8 @@
                 <li><a href="blog.html">Blog</a>
                 </li>
 
+                <!-- login -->
+
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login<span style="margin-left: 5px;" class="fa fa-angle-down"></span></a>
                     <ul class="dropdown-menu" role="menuitem" style="min-width: 250px;">
@@ -97,6 +102,8 @@
                 <li><a href="carrello.html"><i class="fa fa-shopping-cart"></i> <span class="badge">2</span></a>
                 </li>
             </ul>
+
+            <!-- elementi della navbar allineati a destra -->
 
             <ul class="nav navbar-nav navbar-right">
 
