--- a/profilo.html
+++ b/profilo.html
@@ -68,7 +68,7 @@
                         <span class="list-group-item list-group-item-default">Area personale</span>
                         <a href="profilo.html" class="list-group-item active"><i class="fa fa-user"></i> Profilo</a>
                         <a href="carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">2</span> Carrello</a>
-                        <a href="acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
+                        <a href="acquisti.html" class="list-group-item"><i class="fa fa-credit-card"></i> I miei acquisti</a>
                         <a href="recensioni.html" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
                         <a href="impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
                     </div>
@@ -79,7 +79,7 @@
 
                 <div class="col-md-9">
 
-                    <!-- DETTAGLI PERSONALI -->
+                    <!-- DATI PERSONALI -->
 
                     <div class="panel panel-default">
 
@@ -124,6 +124,22 @@
                                         <td>PLLPNC72A01H749U</td>
                                     </tr>
                                     <tr>
+                                        <td>Tipo documento</td>
+                                        <td>Carta d'identità</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Numero documento</td>
+                                        <td>AO483294</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Data di rilascio</td>
+                                        <td>05/01/20011</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Data di scadenza</td>
+                                        <td>05/01/2026</td>
+                                    </tr>
+                                    <tr>
                                         <td>Cellulare</td>
                                         <td>3406175005</td>
                                     </tr>
@@ -135,13 +151,13 @@
 
                     </div>
 
-                    <!-- METODI DI PAGAMENTO -->
+                    <!-- ACCOUNT COLLEGATI -->
 
                     <div class="panel panel-default">
 
                         <div class="panel-heading">
                             <div class="pull-left">
-                                <h4>Metodi di pagamento</h4>
+                                <h4>Account collegati</h4>
                             </div>
                             <div class="header-center">
                             </div>
@@ -153,81 +169,18 @@
                         <div class="panel-body">
                             <table class="table">
                                 <tr>
-                                    <div class="alert alert-success" role="alert">
-                                        <i class="fa fa-check"></i>
-                                        <span class="sr-only">Error:</span> Metodo selezionato
-                                    </div>
-                                </tr>
-                                <tr>
-                                    <td>Tipo</td>
-                                    <td>Postepay</td>
-                                </tr>
-                                <tr>
-                                    <td>Numero</td>
-                                    <td>************1769</td>
-                                </tr>
-                                <tr>
-                                    <td>Scadenza</td>
-                                    <td>07/2019</td>
-                                </tr>
-                                <tr>
-                                    <td>Intestatario</td>
-                                    <td>Pinco Pallino</td>
-                                </tr>
-                                <tr>
-                                    <td>Indirizzo</td>
                                     <td>
-                                        <div>
-                                            <p>Pinco Pallino</p>
-                                            <p>Via Le Mani Dal Culo, 0</p>
-                                            <p>Trepalle, Sondrio 23030</p>
-                                            <p>Italia</p>
-                                            <p>Telefono: 3406175005</p>
-                                        </div>
+                                        <i class="fa fa-facebook-official" style="height: 25px"></i>
                                     </td>
-                                </tr>
-                            </table>
-                            <button class="btn btn-default">Modifica</button>
-                            <button class="btn btn-default">Rimuovi</button>
-                        </div>
-
-                        <hr style="margin-bottom: 25px; border-color: #DEDEDE;" />
-
-                        <div class="panel-body">
-                            <table class="table">
-                                <tr>
-                                    <td>Tipo</td>
-                                    <td>Carta di credito</td>
-                                </tr>
-                                <tr>
-                                    <td>Numero</td>
-                                    <td>************1669</td>
-                                </tr>
-                                <tr>
-                                    <td>Scadenza</td>
-                                    <td>11/2017</td>
-                                </tr>
-                                <tr>
-                                    <td>Intestatario</td>
-                                    <td>Pinco Pallino</td>
-                                </tr>
-                                <tr>
-                                    <td>Indirizzo</td>
                                     <td>
-                                        <div>
-                                            <p>Pinco Pallino</p>
-                                            <p>Via Col Vento, 8</p>
-                                            <p>Trieste, Trieste 34100</p>
-                                            <p>Italia</p>
-                                            <p>Telefono: 3406175005</p>
-                                        </div>
+                                        <p>pallino.pinco@facebook.com</p>
+                                    </td>
+                                    <td>
+                                        <button class="btn btn-default">Scollega</button>
                                     </td>
                                 </tr>
                             </table>
 
-                            <button class="btn btn-default">Seleziona</button>
-                            <button class="btn btn-default">Modifica</button>
-                            <button class="btn btn-default">Rimuovi</button>
                         </div>
 
                     </div>
