--- a/navbar.html
+++ b/navbar.html
@@ -91,9 +91,9 @@
                                         <input type="checkbox">Ricordami
                                     </label>
                                 </div>
-                                <button class="btn btn-success btn-block">Accedi</button>
-                                <button type="button" class="btn btn-primary btn-block"><span class="fa fa-facebook" style="width: 15px;"></span> Accedi con Facebook
-                                </button>
+                                <a class="btn btn-success btn-block" href="profilo.html">Accedi</a>
+                                <a class="btn btn-primary btn-block" href="profilo.html"><span class="fa fa-facebook" style="width: 15px;"></span> Accedi con Facebook
+                                </a>
                             </form>
                         </li>
                     </ul>
