Cambiate immagini slider
e aggiunte immagini tagliate di Luca

--- a/index.html
+++ b/index.html
@@ -54,50 +54,42 @@
             <div class="flexslider">
                 <ul class="slides">
                     <li>
-                        <img src="img/maldive2000x550.jpg" alt="immagine Maldive" />
+                        <img src="img/tokyo2000x550.jpg" alt="immagine Tokyo" />
                         <div class="slide_text">
-                            <div class="slide_title">Maldive</div>
+                            <div class="slide_title">Tokyo</div>
                             <div class="slide_byline">Promozione 3000€ per 2.
                             </div>
                         </div>
                     </li>
                     <li>
-                        <img src="img/alaska2000x550.jpg" alt="immagine Alaska" />
+                        <img src="img/egitto2000x550.jpg" alt="immagine Egitto" />
                         <div class="slide_text">
-                            <div class="slide_title">Alaska</div>
-                            <div class="slide_byline">Sulla neve entro Dicembre 2015.
+                            <div class="slide_title">Egitto</div>
+                            <div class="slide_byline">Sulle dune del Sahara entro Dicembre 2015.
                             </div>
                         </div>
                     </li>
                     <li>
-                        <img src="img/australia2000x550.jpg" alt="immagine Australia" />
+                        <img src="img/isole-fiji2000x550.jpg" alt="immagine Isole Fiji" />
                         <div class="slide_text">
-                            <div class="slide_title">Australia</div>
-                            <div class="slide_byline">Visita il grande Sydney Opera House e vai a spasso con i canguri. Fino al 10 giugno 2015!
+                            <div class="slide_title">Isole Fiji</div>
+                            <div class="slide_byline">Super offerta fino al 10 giugno 2015!
                             </div>
                         </div>
                     </li>
                     <li>
-                        <img src="img/statiuniti2000x550.jpg" alt="immagine New York" />
+                        <img src="img/las-vegas2000x550.jpg" alt="immagine Las Vegas" />
                         <div class="slide_text">
-                            <div class="slide_title">New York</div>
-                            <div class="slide_byline">Un viaggio sulla grande Mela.
+                            <div class="slide_title">Las Vegas</div>
+                            <div class="slide_byline">La meta più richiesta di sempre!
                             </div>
                         </div>
                     </li>
                     <li>
-                        <img src="img/parigi2000x550.jpg" alt="immagine Parigi" />
+                        <img src="img/parigi2000x550(luca).jpg" alt="immagine Parigi" />
                         <div class="slide_text">
                             <div class="slide_title">Parigi</div>
                             <div class="slide_byline">Visita la famosa capitale francese! Promozione valida per novelli sposi.
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="img/cina2000x550.jpg" alt="immagine Muraglia Cinese - Cina" />
-                        <div class="slide_text">
-                            <div class="slide_title">Cina</div>
-                            <div class="slide_byline">1999€ per 2 all-inclusive.
                             </div>
                         </div>
                     </li>
