Modifica riferimenti in assoluti
modifica dei riferimenti ai file da relativi ad assoluti per funzionare
correttamente con subdirectory

--- a/navbar.html
+++ b/navbar.html
@@ -16,8 +16,8 @@
             <!-- Logo e nome del sito  -->
 
             <div id="logo">
-                <img src="favicon.png" class="hidden-xs" height="45" width="45" />
-                <a class="navbar-brand" href="index.html">Glas Travels</a>
+                <img src="/favicon.png" class="hidden-xs" height="45" width="45" />
+                <a class="navbar-brand" href="/index.html">Glas Travels</a>
             </div>
         </div>
 
@@ -33,15 +33,15 @@
 
                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Viaggi<span style="margin-left: 5px;" class="fa fa-angle-down"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="europa.html"><i class="mg map-glb-eu mg-fw"></i>&nbsp; Europe</a>
+                        <li><a href="/viaggi/europa.html"><i class="mg map-glb-eu mg-fw"></i>&nbsp; Europe</a>
                         </li>
-                        <li><a href="america.html"><i class="mg map-glb-am mg-fw"></i>&nbsp; America</a>
+                        <li><a href="/viaggi/america.html"><i class="mg map-glb-am mg-fw"></i>&nbsp; America</a>
                         </li>
-                        <li><a href="asia.html"><i class="mg map-glb-as mg-fw"></i>&nbsp; Asia</a>
+                        <li><a href="/viaggi/asia.html"><i class="mg map-glb-as mg-fw"></i>&nbsp; Asia</a>
                         </li>
-                        <li><a href="africa.html"><i class="mg map-glb-af mg-fw"></i>&nbsp; Africa</a>
+                        <li><a href="/viaggi/africa.html"><i class="mg map-glb-af mg-fw"></i>&nbsp; Africa</a>
                         </li>
-                        <li><a href="oceania.html"><i class="mg map-glb-oc mg-fw"></i>&nbsp; Oceania</a>
+                        <li><a href="/viaggi/oceania.html"><i class="mg map-glb-oc mg-fw"></i>&nbsp; Oceania</a>
                         </li>
                     </ul>
                 </li>
@@ -50,17 +50,17 @@
 
                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Azienda<span style="margin-left: 5px;" class="fa fa-angle-down"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="chi_siamo.html">Profilo aziendale</a>
+                        <li><a href="/chi_siamo.html">Profilo aziendale</a>
                         </li>
-                        <li><a href="business.html">Business</a>
+                        <li><a href="/business.html">Business</a>
                         </li>
-                        <li><a href="tos.html">Termini e Condizioni</a>
+                        <li><a href="/tos.html">Termini e Condizioni</a>
                         </li>
-                        <li><a href="privacy.html">Sicurezza &amp; Privacy</a>
+                        <li><a href="/privacy.html">Sicurezza &amp; Privacy</a>
                         </li>
-                        <li><a href="contatti.html">Contattaci</a>
+                        <li><a href="/contatti.html">Contattaci</a>
                         </li>
-                        <li><a href="lavori_stagionali.html">Lavora con Noi</a>
+                        <li><a href="/lavori_stagionali.html">Lavora con Noi</a>
                         </li>
                     </ul>
                 </li>
@@ -68,7 +68,7 @@
                 <li><a href="#">Recensioni</a>
                 </li>
 
-                <li><a href="blog.html">Blog</a>
+                <li><a href="/blog.html">Blog</a>
                 </li>
 
                 <!-- login -->
@@ -91,15 +91,15 @@
                                         <input type="checkbox">Ricordami
                                     </label>
                                 </div>
-                                <a class="btn btn-success btn-block" href="profilo.html">Accedi</a>
-                                <a class="btn btn-primary btn-block" href="profilo.html"><span class="fa fa-facebook" style="width: 15px;"></span> Accedi con Facebook
+                                <a class="btn btn-success btn-block" href="/profilo.html">Accedi</a>
+                                <a class="btn btn-primary btn-block" href="/profilo.html"><span class="fa fa-facebook" style="width: 15px;"></span> Accedi con Facebook
                                 </a>
                             </form>
                         </li>
                     </ul>
                 </li>
 
-                <li><a href="carrello.html"><i class="fa fa-shopping-cart"></i> <span class="badge">2</span></a>
+                <li><a href="/carrello.html"><i class="fa fa-shopping-cart"></i> <span class="badge">2</span></a>
                 </li>
             </ul>
 
