--- a/footer.html
+++ b/footer.html
@@ -30,20 +30,20 @@
                         <div class="col-sm-4">
                             <li>
                                 <p class="white">Azienda</p>
-                                <p> <a href="chi_siamo.html">Chi siamo</a>
+                                <p> <a href="/chi_siamo.html">Chi siamo</a>
                                     <br/>
-                                    <a href="contatti.html">Sede e contatti</a>
+                                    <a href="/contatti.html">Sede e contatti</a>
                                     <br/>
-                                    <a href="lavori_stagionali.html">Lavora con noi</a>
+                                    <a href="/lavori_stagionali.html">Lavora con noi</a>
                                 </p>
                             </li>
                         </div>
                         <div class="col-sm-3 col-sm-offset-1">
                             <li>
                                 <p class="white">Viaggi più richiesti</p>
-                                <p> <a href="america.html">America</a>
+                                <p> <a href="/viaggi/america.html">America</a>
                                     <br/>
-                                    <a href="europa.html">Europa</a>
+                                    <a href="/viaggi/europa.html">Europa</a>
                                     <br/>
                                     <a href="#">Offerte</a>
                                 </p>
@@ -54,7 +54,7 @@
                                 <p class="white">Link utili</p>
                                 <p> <a href="#">Mappa del sito</a>
                                     <br/>
-                                    <a href="FAQ.html">FAQ</a>
+                                    <a href="/FAQ.html">FAQ</a>
                                     <br/>
                                     <a href="#">EULA</a>
                                     <br/>
@@ -68,7 +68,7 @@
                 <!--- RIGA COPYRIGHT --->
 
                 <div class="row" id="copyright">
-                    <p class="pull-left">Glas Travels &reg; | <a href="privacy.html">Informativa sulla Privacy</a> | <a href="tof.html">Termini di Servizio</a>
+                    <p class="pull-left">Glas Travels &reg; | <a href="/privacy.html">Informativa sulla Privacy</a> | <a href="/tof.html">Termini di Servizio</a>
                     </p>
                     <p class="pull-right"><a href="#">Top</a>
                     </p>
