--- a/navbar.html
+++ b/navbar.html
@@ -56,7 +56,7 @@
                         </li>
                         <li><a href="/tos.html">Termini e Condizioni</a>
                         </li>
-                        <li><a href="/privacy.html">Sicurezza &amp; Privacy</a>
+                        <li><a href="/sicurezza.html">Sicurezza &amp; Privacy</a>
                         </li>
                         <li><a href="/contatti.html">Contattaci</a>
                         </li>
