Aggiunta ricerca, aggiornate navbar e impostazioni

--- a/impostazioni.html
+++ b/impostazioni.html
@@ -207,7 +207,7 @@
                             <table class="table">
                                 <tr>
                                     <td>Tipo</td>
-                                    <td>Carta di credito - MasterCard</td>
+                                    <td>MasterCard</td>
                                 </tr>
                                 <tr>
                                     <td>Numero</td>
