--- a/navbar.html
+++ b/navbar.html
@@ -16,7 +16,7 @@
             <!-- Logo e nome del sito  -->
 
             <div id="logo">
-                <img src="../favicon.png" class="hidden-xs" height="45" width="45" />
+                <img src="favicon.png" class="hidden-xs" height="45" width="45" />
                 <a class="navbar-brand" href="../index.html">Glas Travels</a>
             </div>
         </div>
@@ -56,7 +56,7 @@
                         </li>
                         <li><a href="../tos.html">Termini e Condizioni</a>
                         </li>
-                        <li><a href="../sicurezza.html">Sicurezza &amp; Privacy</a>
+                        <li><a href="../privacy.html">Sicurezza &amp; Privacy</a>
                         </li>
                         <li><a href="../contatti.html">Contattaci</a>
                         </li>
@@ -75,7 +75,7 @@
 
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login<span style="margin-left: 5px;" class="fa fa-angle-down"></span></a>
-                    <ul class="dropdown-menu" role="menuitem" style="min-width: 250px;">
+                    <ul class="dropdown-menu pull-right" role="menuitem" style="min-width: 250px;">
                         <li>
                             <form class="form" role="form" id="login">
                                 <div class="input-group">
@@ -103,36 +103,36 @@
                 </li>
             </ul>
 
+            <!-- search bar visibile -->
+
+            <form class="navbar-form navbar-right visible-lg visible-md visible-xs ">
+                <div class="input-group ">
+                    <input type="Search " placeholder="Cosa stai cercando?" class="form-control" />
+                    <div class="input-group-btn ">
+                        <button class="btn btn-default ">
+                            <span class="fa fa-search "></span>
+                        </button>
+                    </div>
+                </div>
+            </form>
+
             <!-- elementi della navbar allineati a destra -->
 
             <ul class="nav navbar-nav navbar-right">
 
-                <!-- search bar visibile -->
-
-                <form class="navbar-form navbar-right visible-lg visible-md visible-xs ">
-                    <div class="input-group ">
-                        <input type="Search " placeholder="Cosa stai cercando? " class="form-control " />
-                        <div class="input-group-btn ">
-                            <button class="btn btn-info ">
-                                <span class="fa fa-search "></span>
-                            </button>
-                        </div>
-                    </div>
-                </form>
-
                 <!-- search bar a scomparsa -->
 
                 <li class="dropdown visible-sm ">
-                    <a href="# " class="dropdown-toggle " data-toggle="dropdown "><span class="fa fa-search "></span></a>
+                    <a href="# " class="dropdown-toggle" data-toggle="dropdown"><span class="fa fa-search"></span></a>
                     <ul class="dropdown-menu" role="menuitem">
                         <li>
-                            <form class="navbar-form navbar-left visible-sm " role="search ">
+                            <form class="navbar-form navbar-left visible-sm" role="search">
                                 <div class="form-group ">
                                     <div class="input-group ">
-                                        <input type="Search " style="width: 240px; " placeholder="Cosa stai cercando? " class="form-control " />
+                                        <input type="Search " style="width: 240px;" placeholder="Cosa stai cercando?" class="form-control" />
                                         <div class="input-group-btn ">
-                                            <button class="btn btn-info ">
-                                                <span class="fa fa-search "></span>
+                                            <button class="btn btn-default ">
+                                                <span class="fa fa-search"></span>
                                             </button>
                                         </div>
                                     </div>
