Il tasto di ricerca è di nuovo azzurro

--- a/navbar.html
+++ b/navbar.html
@@ -106,11 +106,11 @@
             <!-- search bar visibile -->
 
             <form class="navbar-form navbar-right visible-lg visible-md visible-xs ">
-                <div class="input-group ">
-                    <input type="Search " placeholder="Cosa stai cercando?" class="form-control" />
+                <div class="input-group">
+                    <input type="search" placeholder="Cosa stai cercando?" class="form-control" />
                     <div class="input-group-btn ">
-                        <button class="btn btn-default ">
-                            <span class="fa fa-search "></span>
+                        <button class="btn btn-info">
+                            <span class="fa fa-search"></span>
                         </button>
                     </div>
                 </div>
@@ -128,10 +128,10 @@
                         <li>
                             <form class="navbar-form navbar-left visible-sm" role="search">
                                 <div class="form-group ">
-                                    <div class="input-group ">
-                                        <input type="Search " style="width: 240px;" placeholder="Cosa stai cercando?" class="form-control" />
+                                    <div class="input-group">
+                                        <input type="search" style="width: 240px;" placeholder="Cosa stai cercando?" class="form-control" />
                                         <div class="input-group-btn ">
-                                            <button class="btn btn-default ">
+                                            <button class="btn btn-info">
                                                 <span class="fa fa-search"></span>
                                             </button>
                                         </div>
