--- a/viaggi/africa.html
+++ b/viaggi/africa.html
@@ -72,7 +72,7 @@
                 <!-- COLUMN CONTENT -->
 
                 <div class="col-md-6">
-                    <div class="row list-inline" id="africa_row">
+                    <div class="list-inline" id="africa">
                         <li>
                             <h1 align="center">Egitto</h1>
                         </li>
