--- a/viaggi/america.html
+++ b/viaggi/america.html
@@ -72,7 +72,7 @@
                 <!-- COLUMN CONTENT -->
 
                 <div class="col-md-6">
-                    <div class="row list-inline" id="america_row">
+                    <div class="list-inline" id="america">
                         <li>
                             <h1 align="center">Las Vegas</h1>
                         </li>
