--- a/viaggi/asia.html
+++ b/viaggi/asia.html
@@ -72,7 +72,7 @@
                 <!-- COLUMN CONTENT -->
 
                 <div class="col-md-6">
-                    <div class="row list-inline" id="asia_row">
+                    <div class="list-inline" id="asia">
                         <li>
                             <h1 align="center">Tokyo</h1>
                         </li>
