--- a/viaggi/europa.html
+++ b/viaggi/europa.html
@@ -72,7 +72,7 @@
                 <!-- COLUMN CONTENT -->
 
                 <div class="col-md-6">
-                    <div class="row list-inline" id="europa_row">
+                    <div class="list-inline" id="europa">
                         <li>
                             <h1 align="center">Parigi</h1>
                         </li>
