--- a/viaggi/oceania.html
+++ b/viaggi/oceania.html
@@ -72,7 +72,7 @@
                 <!-- COLUMN CONTENT -->
 
                 <div class="col-md-6">
-                    <div class="row list-inline" id="oceania_row">
+                    <div class="list-inline" id="oceania">
                         <li>
                             <h1 align="center">Isole Fiji</h1>
                         </li>
