Aggiunta pagina ricerca

--- a/navbar.html
+++ b/navbar.html
@@ -109,9 +109,9 @@
                 <div class="input-group">
                     <input type="search" placeholder="Cosa stai cercando?" class="form-control" />
                     <div class="input-group-btn ">
-                        <button class="btn btn-info">
+                        <a class="btn btn-info" href="ricerca.html">
                             <span class="fa fa-search"></span>
-                        </button>
+                        </a>
                     </div>
                 </div>
             </form>
@@ -131,9 +131,9 @@
                                     <div class="input-group">
                                         <input type="search" style="width: 240px;" placeholder="Cosa stai cercando?" class="form-control" />
                                         <div class="input-group-btn ">
-                                            <button class="btn btn-info">
+                                            <a class="btn btn-info" href="ricerca.html">
                                                 <span class="fa fa-search"></span>
-                                            </button>
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
