--- a/ricerca.html
+++ b/ricerca.html
@@ -45,54 +45,83 @@
 
             <!-- PATH ROW -->
 
-            <div class="row">
-                <div class="col-lg-12">
-                    <ol class="breadcrumb" id="path">
-                        <li><a href="index.html">Home</a>
-                        </li>
-                        <li>Area Personale</li>
-                        <li class="active">Profilo</li>
-                    </ol>
-                </div>
+            <div class="row col-lg-12">
+                <ol class="breadcrumb" id="path">
+                    <li><a href="index.html">Home</a>
+                    </li>
+                    <li>Area Personale</li>
+                    <li class="active">Profilo</li>
+                </ol>
             </div>
 
             <!-- search bar row -->
+            <div class="row col-lg-12">
 
-            <div class="form-group col-lg-3 col-md-3 col-sm-4" style="padding-left: 0px; margin-left: 0px; padding-right: 0px; margin-right: 0px;">
-                <div class="input-group">
-                    <span class="input-group-addon">Cerca in</span>
-                    <select class="form-control search-select">
-                        <option>Tutto il sito</option>
-                        <option>Offerte</option>
-                        <option>Blog</option>
-                        <option>Recensioni</option>
-                    </select>
+                <div class="form-group col-lg-3 col-md-3 col-sm-4" style="padding-left: 0px; margin-left: 0px; padding-right: 0px; margin-right: 0px;">
+                    <div class="input-group">
+                        <span class="input-group-addon">Cerca in</span>
+                        <select class="form-control search-select">
+                            <option>Tutto il sito</option>
+                            <option>Offerte</option>
+                            <option>Blog</option>
+                            <option>Recensioni</option>
+                        </select>
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group col-lg-9 col-md-9 col-sm-8" style="padding-left: 0px; margin-left: 0px; padding-right: 0px; margin-right: 0px;">
-                <div class="input-group ">
-                    <input type="search" class="form-control search-input" placeholder="Cosa stai cercando?" />
-                    <span class="input-group-btn ">
+                <div class="form-group col-lg-9 col-md-9 col-sm-8" style="padding-left: 0px; margin-left: 0px; padding-right: 0px; margin-right: 0px;">
+                    <div class="input-group ">
+                        <input type="search" class="form-control search-input" placeholder="Cosa stai cercando?" value="escursioni" />
+                        <span class="input-group-btn ">
                         <button class="btn btn-default">
                             <i class="fa fa-search"></i>
                         </button>
                     </span>
+                    </div>
                 </div>
+
+            </div>
+
+            <!-- results -->
+
+            <div id="search-results">
+
+                <div class="row col-lg-12 search-result">
+                    <img class="purchase-item-thumbnail fixed hidden-xs" src="img/alaska550x550.jpg">
+                    <div class="purchase-item-details">
+                        <a href="#"><h4>Viaggi - Alaska</h4></a>
+                        <p>... il viaggio può essere arricchito con numerose
+                            <mark>escursioni</mark>, acquistabili singolarmente. Gita con i cani da slitta, pesca sul ghiaccio, corso di motoslitta, sono solo alcune delle fantastiche esperienze che potrete ...</p>
+                    </div>
+                </div>
+
+                <div class="row col-lg-12 search-result">
+                    <img class="purchase-item-thumbnail fixed hidden-xs" src="img/frozen-deer-200x200.png">
+                    <div class="purchase-item-details">
+                        <a href="#"><h4>Recensioni - Alaska - LaDamaBianca</h4></a>
+                        <p>... io e la mia famiglia abbiamo partecipato a quasi tutte le
+                            <mark>escursioni</mark> e ci siamo divertiti tantissimo!11one!! Ce n'è veramente per tutti i gusti!! Ai bambini è piacuta soprattutto la cavalcata sulle renne di Babbo Natale, quelle vere!!1 Col naso rosso e tutto il resto! E volavano pure!UNO! E la neve forse non era neve ...</p>
+                    </div>
+                </div>
+
+                <div class="row col-lg-12 search-result">
+                    <img class="purchase-item-thumbnail fixed hidden-xs" src="img/alaska550x550.jpg">
+                    <div class="purchase-item-details">
+                        <a href="#"><h4>Offerte - Alaska</h4></a>
+                        <p>... e se prenoti entro fine Ottobre, le prime 2
+                            <mark>escursioni</mark> le paghi solo la metà!!! E allora perchè aspettare? Prenota subito la tua vacanza sulla coc- hem neve ...</p>
+                    </div>
+                </div>
+
             </div>
 
         </div>
 
-        <!-- results row -->
+        <!-- FOOTER -->
 
-        <div class="row">
-        </div>
+        <div id="footer"></div>
 
     </div>
-
-    <!-- FOOTER -->
-
-    <div id="footer"></div>
 
     <!-- Bootstrap Javascript Core-->
 
